# AI_Clonosaur

./: README.md  package-lock.json  package.json
docs/: IDENTITY.md  PLAN_TECNICO.md  PRIVACY.md  ROADMAP.md  SKILLS.md  VERCEL_GROQ_SETUP.md  WEB_VERSION.md
src/: App.css  App.tsx  Chat.css  Chat.tsx  Copilot.css  Copilot.tsx  Import.css  Import.tsx  Interview.css  Interview.tsx  Memories.css  Memories.tsx  Memory.css  Memory.tsx  Metrics.css  Metrics.tsx  Privacidad.css  Privacidad.tsx  Profile.css  Profile.tsx  Settings.css  Settings.tsx  Splash.css  Splash.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/db/: schema.sql
src-tauri/src/: candidate_memories.rs  chat.rs  contradiction_detector.rs  copilot.rs  db.rs  decision_model.rs  deletion.rs  discord_import.rs  feedback.rs  generic_import.rs  gmail_import.rs  hybrid.rs  import_common.rs  interview.rs  lib.rs  llm.rs  main.rs  memory.rs  metrics.rs  profile.rs  reddit_import.rs  sensitivity.rs  sessions.rs  settings.rs  sources.rs  tone_model.rs  twitter_import.rs  values_model.rs  whatsapp.rs
src/interview/: questions.json
vercel-backend/: .env.example  README.md  next.config.ts  package.json
vercel-backend/app/: layout.tsx  page.tsx
vercel-backend/app/chat/completions/: route.ts
